@@ -59,6 +59,7 @@ gw/smsc_smpp.h -text
 gw/urltrans.c -text
 gw/urltrans.h -text
 gw/wapbox.c -text
+gw/wapbox.h -text
 gw/wapbox.wapconf -text
 gw/wsp.c -text
 gw/wsp.h -text
